--- a/postgres-appliance/Dockerfile
+++ b/postgres-appliance/Dockerfile
@@ -21,13 +21,11 @@ RUN export DEBIAN_FRONTEND=noninteractive \
                 | tar xz -C /bin --strip=1 --wildcards --no-anchored etcdctl etcd; \
     fi \
 \
-    # Cleanup all locales but en_US.UTF-8
-    && find /usr/share/i18n/charmaps/ -type f ! -name UTF-8.gz -delete \
-    && find /usr/share/i18n/locales/ -type f ! -name en_US ! -name en_GB ! -name i18n* ! -name iso14651_t1 ! -name iso14651_t1_common ! -name 'translit_*' -delete \
-    && echo 'en_US.UTF-8 UTF-8' > /usr/share/i18n/SUPPORTED \
-\
-    ## Make sure we have a en_US.UTF-8 locale available
+    ## Make sure we have locales available
     && localedef -i en_US -c -f UTF-8 -A /usr/share/locale/locale.alias en_US.UTF-8 \
+    && localedef -i en_GB -c -f UTF-8 -A /usr/share/locale/locale.alias en_GB.UTF-8 \
+    && localedef -i nb_NO -c -f UTF-8 -A /usr/share/locale/locale.alias nb_NO.UTF-8 \
+    && localedef -i nn_NO -c -f UTF-8 -A /usr/share/locale/locale.alias nn_NO.UTF-8 \
 \
     # Add PGDG repositories
     && DISTRIB_CODENAME=$(sed -n 's/DISTRIB_CODENAME=//p' /etc/lsb-release) \
